src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Acct_Team_Last_Synced_D_T__c</fullName>
        <label>Acct Team Last Synced D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acct_Team_Last_Updated_D_T__c</fullName>
        <label>Acct Team Last Updated D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Hours to be used for all entitlements created for Accounts using this District.</description>
        <inlineHelpText>Business Hours to be used for all entitlements created for Accounts using this District.</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_BU_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>District/BU Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>District_L_Code__c</fullName>
        <label>District L-Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Region_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>District/Region Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ES_Multiplier_F__c</fullName>
        <formula>IF((ES_Multiplier__c &gt; 0), ES_Multiplier__c, 1.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Multiplier F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Multiplier__c</fullName>
        <label>ES Multiplier</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maint_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maint User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_Related_State_Provinces__c</fullName>
        <label># Related State/Provinces</label>
        <summaryForeignKey>Related_State_Province__c.District__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Related_Zip_Postal_Codes__c</fullName>
        <label># Related Zip/Postal Codes</label>
        <summaryForeignKey>Related_Zip_Postal_Code__c.District__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Territory__r.Region__r.Name</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevRec_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rev Rec User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBCF_Country_CPI__c</fullName>
        <label>Country CPI</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_RVP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services RVP Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <formula>Territory__r.Region__r.Theatre__r.Name</formula>
        <label>Theatre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unknown_District__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown District</label>
        <type>Checkbox</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Theatre__c</columns>
        <columns>Territory__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Description__c</columns>
        <columns>Processed_D_T__c</columns>
        <columns>Allow_Deletion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Legal_User__c</columns>
        <columns>RevRec_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Districts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_districts</fullName>
        <columns>NAME</columns>
        <columns>SBCF_Country_CPI__c</columns>
        <columns>Territory__c</columns>
        <columns>Theatre__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Geo-Coding</value>
        </filters>
        <label>Districts for CPI</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>